# OOD-Detection-using-One-vs-All-Classifiers

./: .gitignore  README.md  guild.yml  pyproject.toml  train.py  train_energy.py  train_heads.py  train_mlp_ova.py  train_vos.py
datamodules/: abstractdm.py  blob.py  cifar10.py  cifar100.py  fashionmnist.py  mnist.py  notmnist.py  places365.py  svhn.py  synthesized_dm.py
lightningmodules/: abstractmodule.py  densenet.py  energy.py  mlp.py  ovaf.py  ovnni.py  toy.py  vos.py  wideresnet.py
models/: abstractmodel.py  densenet.py  head.py  mlp.py  wideresnet.py
utils/: aggregation.py  experiments.py  mahalanobis.py  metric_utils.py  metrics.py  multivariate_gaussian.py  sampling.py  transforms.py
