[tool.poetry]
name = "ood-detection-using-one-vs-all-classifiers"
version = "0.1.0"
description = ""
authors = ["Daniel Korth <korth@in.tum.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
argparse = "^1.4.0"
torch = "^1.11.0"
pytorch-lightning = "^1.5.10"

[tool.poetry.dev-dependencies]
pandas = "^1.4.1"
numpy = "^1.22.3"
scipy = "^1.8.0"
guildai = "^0.7.5"
jupyterlab = "^3.3.2"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
torchvision = "^0.12.0"
seaborn = "^0.11.2"
timm = "^0.5.4"
kaggle = "^1.5.12"
imbalanced-learn = "^0.9.0"
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
